typescript/checker/tests/conformance/classes/constructorDeclarations/constructorParameters/constructorImplementationWithDefaultValues2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            470,
        ),
        hi: BytePos(
            471,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/constructorDeclarations/constructorParameters/constructorImplementationWithDefaultValues2.ts:4:17
  |
4 |         var y = x;
  |                 ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            604,
        ),
        hi: BytePos(
            605,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/constructorParameters/constructorImplementationWithDefaultValues2.ts:11:17
   |
11 |         var z = x;
   |                 ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            731,
        ),
        hi: BytePos(
            732,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/constructorParameters/constructorImplementationWithDefaultValues2.ts:18:17
   |
18 |         var y = x;
   |                 ^

